bug: Fix the gap at the right on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,24 @@
 /* ------------------------------------------------------------------------------------- Global styles */
 
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 html {
-    width: 100%;
+    border: 0;
 }
 
 body {
     background-color: #a2daff;
-    height: 100%;
-    width: 100%;
     text-align: center;
     font-family: 'Lato', sans-serif;
     color: #fff;
+    border: 0;
 }
 
 /* ------------------------------------------------------------------------------------- Navbar */
@@ -44,7 +46,7 @@ body {
 /* ------------------------------------------------------------------------------------- Header */
 
 header {
-    height: 82vh;
+    height: 20%;
     align-content: center;
 }
 
@@ -59,11 +61,9 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: relative;
     border: 0;
     margin: 0;
     padding: 0;
-    border: 0;
 }
 
 .header-text-container {
@@ -91,6 +91,7 @@ h1 {
 /* ------------------------------------------------------------------------------------- Main section */
 
 .main-section {
+    margin-top: 20%;
     color: rgb(58, 58, 58);
 }
 
@@ -119,6 +120,11 @@ img {
 }
 
 /* ------------------------------------------------------------------------------------- Videos */
+
+iframe {
+    max-width: 70%;
+    height: auto;
+}
 
 /* ------------------------------------------------------------------------------------- Footer */
 
